Use high C instead of Midi control

--- a/keys/keythingy.html
+++ b/keys/keythingy.html
@@ -1,4 +1,8 @@
 <div>
+  <p>
+    Welcome to this dinky tool! It goes through all 12 keys at random; I use it to practice scales, chord types, etc. without developing muscle memory of moving around the circle of 5ths. You can hit Space/Enter to go to the next key, Esc/R to restart. Alternatively if your MIDI keyboard is plugged in when accessing this page, the lowest A on the keyboard will go to the next key and the highest C will restart.
+  </p>
+
   <button onclick="next()">Next</button>
   <button onclick="reset()">Reset</button>
 
